--- a/hw1.html
+++ b/hw1.html
@@ -11,88 +11,90 @@
     <header>
         A Shopping Website Demo
     </header>
-    <topnav>
-        <ul>
-            <li class="nav-left-icon"><img src="asset/Cream_Soda_sprite_001.png" alt="nav_icon1"></li>
-            <li class="nav-left"><a class="nav-link" href="#NewArrivals">New Arrivals</a></li>
+    <nav>
+        <ul class="main-nav">
+            <li class="nav-left-container">
+                <div class="nav-left"><img src="asset/Cream_Soda_sprite_001.png" alt="nav_icon1"></div>
+                <div class="nav-left"><a class="nav-link" href="#NewArrivals">New Arrivals</a></div>
 
-            <li class="nav-left">
-                <div class="dropdown">
-                    <a class="nav-link" href="#Bags">Bags</a>
-                </div>
-                <div class="dropdown-bg">
-                    <ul class="dropdown-col1-1">
-                        <li>
-                            <h2>
-                                GET INSPIRED
-                            </h2>
-                        </li>
-                        <li><a href="#">Dictionary</a></li>
-                        <li><a href="#">Mild x Wild</a></li>
-                        <li><a href="#">Styled by you</a></li>
-                    </ul>
-                    <ul class="dropdown-col1-2">
-                        <li>
-                            <h2>
-                                STYLED
-                            </h2>
-                        </li>
-                        <li><a href="#">Trend Bags</a></li>
-                        <li><a href="#">Good Bags</a></li>
-                        <li><a href="#">Sale</a></li>
-                    </ul>
-                    <div class="dropdown-col1-3">
-                        <img src="asset/dropdown_image_1.webp" alt="dp1">
+                <div class="nav-left">
+                    <div class="dropdown">
+                        <a class="nav-link" href="#Bags">Bags</a>
                     </div>
+                    <div class="dropdown-bg">
+                        <ul class="dropdown-col1-1">
+                            <li>
+                                <h2>
+                                    GET INSPIRED
+                                </h2>
+                            </li>
+                            <li><a href="#">Dictionary</a></li>
+                            <li><a href="#">Mild x Wild</a></li>
+                            <li><a href="#">Styled by you</a></li>
+                        </ul>
+                        <ul class="dropdown-col1-2">
+                            <li>
+                                <h2>
+                                    STYLED
+                                </h2>
+                            </li>
+                            <li><a href="#">Trend Bags</a></li>
+                            <li><a href="#">Good Bags</a></li>
+                            <li><a href="#">Sale</a></li>
+                        </ul>
+                        <div class="dropdown-col1-3">
+                            <img src="asset/dropdown_image_1.webp" alt="dp1">
+                        </div>
+                    </div>
+
                 </div>
 
+                <div class="nav-left">
+                    <div class="dropdown">
+                        <a class="nav-link" href="#Accesseries">Accesseries</a>
+                    </div>
+                    <ul class="dropdown-bg">
+                        <ul class="dropdown-col2-1">
+                            <li><a href="#">Love-on patches</a></li>
+                            <li><a href="#">Travels</a></li>
+                            <li><a href="#">Add-ons</a></li>
+                            <li><a href="#">Jewelry</a></li>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Sale</a></li>
+                        </ul>
+
+                        <div class="dropdown-col2-2">
+                            <img src="asset/dropdown_image_2.webp" alt="dp2">
+                        </div>
+                    </ul>
+
+                </div>
+                <div class="nav-left">
+                    <div class="dropdown">
+                        <a class="nav-link" href="#Experience">Experience</a>
+                    </div>
+                    <ul class="dropdown-bg">
+                        <div class="dropdown-col3">
+                            <img src="asset/dropdown_image_3.webp" alt="dp3">
+                        </div>
+                        <div class="dropdown-col3">
+                            <img src="asset/dropdown_image_4.webp" alt="dp4">
+                        </div>
+                    </ul>
+
+                </div>
+
+                <div class="nav-left"><a class="nav-link" href="#About">About</a></div>
+                <div class="nav-left"><a class="nav-link" href="#SummerSale">Summer Sale</a></div>
             </li>
 
-            <li class="nav-left">
-                <div class="dropdown">
-                    <a class="nav-link" href="#Accesseries">Accesseries</a>
-                </div>
-                <ul class="dropdown-bg">
-                    <ul class="dropdown-col2-1">
-                        <li><a href="#">Love-on patches</a></li>
-                        <li><a href="#">Travels</a></li>
-                        <li><a href="#">Add-ons</a></li>
-                        <li><a href="#">Jewelry</a></li>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Sale</a></li>
-                    </ul>
-
-                    <div class="dropdown-col2-2">
-                        <img src="asset/dropdown_image_2.webp" alt="dp2">
-                    </div>
-                </ul>
-
+            <li class="nav-right-container">
+                <div class="nav-right"><a class="nav-link" href="#Signin">Sign in</a></div>
+                <div class="nav-right"><img src="asset/shopping_bag_icon.png" alt="nav_icon2"></div>
+                <div class="nav-right"><img src="asset/search-icon.png" alt="nav_icon3"></div>
             </li>
-            <li class="nav-left">
-                <div class="dropdown">
-                    <a class="nav-link" href="#Experience">Experience</a>
-                </div>
-                <ul class="dropdown-bg">
-                    <div class="dropdown-col3">
-                        <img src="asset/dropdown_image_3.webp" alt="dp3">
-                    </div>
-                    <div class="dropdown-col3">
-                        <img src="asset/dropdown_image_4.webp" alt="dp4">
-                    </div>
-                </ul>
-
-            </li>
-
-            <li class="nav-left"><a class="nav-link" href="#About">About</a></li>
-            <li class="nav-left"><a class="nav-link" href="#SummerSale">Summer Sale</a></li>
-
-
-            <li class="nav-right"><a class="nav-link" href="#Signin">Sign in</a></li>
-            <li class="nav-right-icon"><img src="asset/shopping_bag_icon.png" alt="nav_icon2"></li>
-            <li class="nav-right-icon"><img src="asset/search-icon.png" alt="nav_icon3"></li>
-
         </ul>
-    </topnav>
+    </nav>
 
     <a href="#" class="top-btn">
         <p>
